 -- Allow extension names, include context, switch to use global vars.
 -- Allow variables in extensions.conf to reference previously defined ones
 -- Merge voicemail enhancements (app_voicemail2)
 -- Add multiple queueing strategies
 -- Merge support for 'T'
 -- Allow pending agent calling (Agent/:1)
 -- Add groupings to agents.conf
 -- Add video support to IAX2
 -- Zaptel optimize playback
 -- Add video support to SIP
 -- Make RTP ports configurable
 -- Add RDNIS support to SIP and IAX2
 -- Add transfer app (implement in SIP and IAX2)
 -- Make voicemail segmentable by context (app_voicemail2)
 -- Major restructuring of voicemail (app_voicemail2)
 -- Add initial ENUM support
 -- Add malloc debugging support
 -- Add preliminary Voicetronix support
 -- Add iLBC codec
Asterisk 0.4.0
 -- Merge and edit Nick's FXO dial support
 -- Reengineer SIP registration (outbound)
 -- Support call pickup on SIP and compatibly with ZAP
 -- Support 302 Redirect on SIP
 -- Management interface improvements
 -- Add "hint" support
 -- Improve call forwarding using new "Local" channel driver.
 -- Add "Local" channel
 -- Substantial SIP enhancements including retransmissions
 -- Enforce case sensitivity on extension/context names
 -- Add monitor support (Thanks, Mahmut)
 -- Add experimental "trunk" option to IAX2 for high density VoIP
 -- Add experimental "debug channel" command
 -- Add 'C' flag to dial command to reset call detail record (handy for calling cards)
 -- Add NAT and dynamic support to MGCP
 -- Allow selection of in-band, out-of-band, or INFO based DTMF
 -- Add contributed "*80" support to blacklist numbers (Thanks James!)
 -- Add "NAT" option to sip user, peer, friend
 -- Add experimental "IAX2" protocol
 -- Change special variable "EXTEN-n" to "EXTEN:n" to follow Bash syntax
 -- Add "Enhanced" AGI with audio pass-through (voice recognition anyone?)
 -- Choose best priority from codec from allow/disallow
 -- Reject SIP calls to self